[project]
authors = [{name = "iury Simoes-Sousa", email = "iuryt@pm.me"}]
dependencies = []
name = "sample_python_project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
sample_python_project = { path = ".", editable = true }

[tool.pixi.tasks]
